# Industry-Solutions-Directory-PRO-Code

./: .gitignore  AQ_SUMMARY.md  ARCHITECTURE.md  DEMO_CHART_VS_TABLE_QUERIES.md  DEMO_FLOW_ORDER.md  DEPLOYMENT_CHECKLIST_FOR_TESTING.md  DOCUMENTATION_INDEX.md  DUAL_BROWSING_IMPLEMENTATION.md  DUPLICATE_SOLUTIONS_FIX.md  Email_to_Managers_ISD_Project_Update.md  FUTURE_ENHANCEMENTS.md  PROJECT_SUMMARY.md  QUICK_START_FOR_TESTERS.md  README.md  SAMPLE_QUESTIONS.md  TESTING_FEEDBACK.md  TESTING_GUIDE.md  email.md  start-local.sh
MOON/: orbit.md  orbit.txt
backend/: .dockerignore  .env.example  ANTI_HALLUCINATION_FIXES.md  AUTHENTICATION.md  Dockerfile  interactive_chat.py  interactive_chat_test_result_1.txt  interactive_chat_test_result_2.txt  requirements.txt  test_rest_api_search.py  test_streaming.py
conversation_history_samples/: conversation_customer_2026-02-16T18_23_52.078Z.md  conversation_customer_2026-02-16T18_23_53.395Z.html  conversation_customer_2026-02-16T19_24_08.940Z.md  conversation_seller_2026-02-16T18_23_43.764Z.md  conversation_seller_2026-02-16T18_23_45.941Z.html  conversation_seller_2026-02-16T19_24_12.589Z.md  conversation_seller_2026-02-16T21_38_10.841Z.md  conversation_seller_2026-02-16T21_38_12.413Z.html
data-ingestion/: API_INVESTIGATION.md  ISD_API_Explorer.ipynb  ISD_WEBSITE_STRUCTURE.md  Industry Solutions Directory API Endpoints.md  README.md  morecurls.sh  (+17 more)
mcp-isd-server/: CD-ANALYSIS.md  Dockerfile  README.md  SAMPLE_USER_QUESTIONS.md  foundry_agent_example.py  http_server.py  pyproject.toml  requirements.txt  server.py  test_client.py
(+250 files in other folders)
