[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-isd-server"
version = "1.0.0"
description = "MCP Server for Microsoft Industry Solutions Directory"
authors = [{name = "Arturo Quiroga"}]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
mcp-isd-server = "mcp_isd_server.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_isd_server*"]
